test_src/compiler_errors/literals/IntTooLargeError5.b
class IntTooLargeError5 {
    void test() {
        println(-123456789012);
    }
}
